--- a/index.html
+++ b/index.html
@@ -95,7 +95,14 @@
                 <a href="https://github.com/developer-256/airport_management" target="_blank">Github Repo</a>
             </li>
         </ul>
-
+        <ul>
+            <li>12</li>
+            <li>Ecommerce Website (HTML + Tailwind)</li>
+            <div>
+                <a href="https://developer-256.github.io/ecommerce-website/" target="_blank">Live URL</a>
+                <a href="https://github.com/developer-256/ecommerce-website" target="_blank">Github Repo</a>
+            </div>
+        </ul>
 
     </section>
 
