--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
             </div>
         </ul>
 
+        <ul>
+            <li>12</li>
+            <li>Ecommerce Website (HTML + Tailwind)</li>
+            <div>
+                <a href="https://github.com/developer-256/next-js-securehops/" target="_blank">Live URL</a>
+                <a href="https://github.com/developer-256/" target="_blank">Github Repo</a>
+            </div>
+        </ul>
+        
     </section>
 
 </body>
