--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
         <ul>
             <li>12</li>
-            <li>Ecommerce Website (HTML + Tailwind)</li>
+            <li>Securehops.com</li>
             <div>
                 <a href="https://github.com/developer-256/next-js-securehops/" target="_blank">Live URL</a>
-                <a href="https://github.com/developer-256/" target="_blank">Github Repo</a>
+                <a href="https://github.com/developer-256/next-js-securehops" target="_blank">Github Repo</a>
             </div>
         </ul>
         
