added securehops live url

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <li>12</li>
             <li>Securehops.com</li>
             <div>
-                <a href="https://next-js-securehops.vercel.app/" target="_blank">Live URL</a>
+                <a href="https://projectsecure.vercel.app/" target="_blank">Live URL</a>
                 <a href="https://github.com/developer-256/next-js-securehops" target="_blank">Github Repo</a>
             </div>
         </ul>
